[metadata]
name = hannah
version = 1.0.0
description = Heuristically Aiding Neural Network based AI for Humans
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaamiki/hannah
author = Akshay Mestry (XAMES3)
author_email = xames3.developer@gmail.com
maintainer = Akshay Mestry (XAMES3)
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords = python, hannah, kaamiki, neural-networks
project_urls =
    Source = https://github.com/kaamiki/hannah
    Tracker = https://github.com/kaamiki/hannah/issues

[options]
packages = find:
python_requires = >=3.6
zip_safe = False

[options.extras_require]
dev =
    black
    flake8
    mypy
    sphinx
    sphinx_rtd_theme
test =
    pytest
    tox

[bdist_wheel]
universal = True

[build_sphinx]
source_dir = doc/en/
build_dir = doc/build
all_files = 1

[upload_sphinx]
upload_dir = doc/en/build/html

[check-manifest]
ignore =
    hannah/_version.py

[flake8]
max-line-length = 79
extend-ignore =
    E203,  # Whitespace before :
    W503,  # Whitespace before binary operator
    W504,  # Whitespace after binary operator
    W505   # Docstring length > 79 chars

[mypy]
mypy_path = hannah
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[mypy-tests.*]
disallow_untyped_defs = false
